Steps towards a more modular project