@@ -1,15 +1,12 @@
 package nl.siegmann.ttcsv.csv;
 
 
-import nl.siegmann.ttcsv.csv.CsvConfig;
-import nl.siegmann.ttcsv.csv.CsvWriter;
 import nl.siegmann.ttcsv.test.TextValueSupplier;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.io.StringWriter;
 import java.io.Writer;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
@@ -23,20 +20,21 @@ public class CsvWriterTest {
 
         // given
         TextValueSupplier textValueSupplier = new TextValueSupplier();
-
-        Writer out = new StringWriter();
-        Stream<List<String>> data = LongStream
+        Stream<List<String>> testInput = LongStream
                 .range(1, 3)
-                .mapToObj(rowNr -> Arrays.asList(
+                .mapToObj(rowNr -> List.of(
                         String.valueOf(rowNr),
                         textValueSupplier.get(),
                         "\"hi\""));
+
+        Writer out = new StringWriter();
+
 
         CsvWriter csvWriter = new CsvWriter(new CsvConfig().withFieldSeparator('|').withQuoteValues(true).withRowSeparatorChars("\n"));
 
         // when
         csvWriter.writeCsv(
-                data
+                testInput
                 , out
         );
 
